--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,7 @@
     --nav-color: #33354d;
     --button-background: #6366f1;
     --button-text-color: #ffffff;
+    --logo-border-color: #E2E5F1;
   }
   
   [data-theme="dark"] {
