--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -250,6 +250,7 @@
         display: flex;
         margin: 0;
         margin-top: 0;
+        margin-left: 5rem;
         .left-img {
             margin-top: 5rem;
             box-shadow: 1px 0px 25px 35px rgba(43, 39, 39, 0.2);
