--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  outline: 1px solid lightgrey;
+
 }
 
 html, body {
@@ -19,6 +21,8 @@ html, body {
   font-weight: 400;
   font-style: normal;
   line-height: 1.5;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
