--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -20,28 +20,21 @@
 }
 
 
-.container {
+.navbar-container {
     width: 100%;
     padding: 1rem;
     padding-right: 1rem;
     margin-left: auto;
     margin-right: auto;
 
-    @media (width >= 768px) {
-        width: 720px;
-    }
-    @media (width >= 992px) {
-        width: 960px;
-    }
-
-    @media (width >= 1400px) {
-        width: 1320px;
-    }
+  
 }
 header {
     background-color: var(--section-background-color);
     padding: 1rem 0;
-    .container {
+    outline: 2px solid green;
+
+    .navbar-container {
 
         display: grid;
         align-items: center;
