--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  outline: 1px solid lightgrey;
+  ///outline: 1px solid lightgrey;
 
 }
 
@@ -16,13 +16,14 @@ html, body {
   scroll-behavior: smooth;
   color: var(--text-color);
   background-color: var(--background-color);
-  font-family: "Manrope", serif;
+  font-family: "Manrope", sans-serif;
   font-size : 16px; 
   font-weight: 400;
   font-style: normal;
   line-height: 1.5;
   max-width: 100%;
   overflow-x: hidden;
+
 }
 
 a {
@@ -53,4 +54,20 @@ ul, li {
   max-width: 1320px;
   margin: 0 auto;
   padding: 0 1rem;
+  outline:2px solid yellow;
+
+   @media (min-width: 768px) {
+        width: 720px;
+    }
+
+    @media (min-width: 992px) {
+        width: 960px;
+    }
+
+    @media (min-width: 1400px) {
+        width: 1320px;
+    }
+
 }
+
+
