faq responsive för telfon är implmenterad

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,4 @@
 @import './components/Features/features';
 @import './components/Slider/Slide';
 @import './components/DisktopFeature/DisktopFeature';
+@import './components/Faq/Faqs';
