--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,7 @@
     --button-background: #6366f1;
     --button-text-color: #ffffff;
     --logo-border-color: #E2E5F1;
+    --Faq-border-color: #E2E5F1;
   }
   
   [data-theme="dark"] {
