--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,4 @@
 @import './components/Slider/Slide';
 @import './components/DisktopFeature/DisktopFeature';
 @import './components/Faq/Faqs';
+@import './components/Testimonials/Testimonials'
