--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,4 +10,6 @@
 @import './components/Slider/Slide';
 @import './components/DisktopFeature/DisktopFeature';
 @import './components/Faq/Faqs';
-@import './components/Testimonials/Testimonials'
+@import './components/Testimonials/Testimonials';
+@import './components/Susbscribe/Subscribe';
+@import './components/Footer/Footer';
