--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,9 +15,16 @@
   }
   
   [data-theme="dark"] {
+    --text-color: #ffffff;
     --text-muted-color: #9397ad;
     --nav-color: #ffffff;
     --headline-color: #ffffff;
     --background-color: #0b0f19;
+    --section-background-color: #131722;
+    --link-color: #4f46e5;
+    --button-background: #4f46e5;
+    --button-text-color: #ffffff;
+    --logo-border-color: #1f2937;
+    --Faq-border-color: #1f2937;
   }
   
