--- a/src/components/Susbscribe/Subscribe.scss
+++ b/src/components/Susbscribe/Subscribe.scss
@@ -1,6 +1,6 @@
 .Subscribe {
     padding: 2rem 0;
-    background-color: var(--section-background-color);
+    background-color: var(--background-color);
 
     .Sub-managment {
         display: flex;
@@ -10,7 +10,7 @@
         max-width: 900px;
         margin: auto;
         padding: 1.5rem;
-        background: var(--background-color);
+        background: var(--section-background-color);
         border-radius: 10px;
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 
@@ -20,12 +20,12 @@
             gap: 1rem;
 
             img {
-                width: 40px;
-                height: 40px;
+                width: 50px;
+                height: 50px;
             }
 
             h4 {
-                font-size: 18px;
+                font-size: 15px;
                 color: var(--headline-color);
                 font-weight: 600;
             }
@@ -34,21 +34,40 @@
         .sub-rightbord {
             display: flex;
             align-items: center;
-            gap: 1rem;
+            
+
+            .email-container {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid var(--text-muted-color);
+                background-color: var(--background-color);
+                border-radius: 5px;
+                padding: 0rem 0rem 0rem 1rem;
+            
+                i {
+                    font-size: 15px;
+                    color: var(--text-muted-color);
+                }
+            
+            }
 
             .email-input {
+                justify-content: center;
+                align-items: center;
                 width: 250px;
                 height: 40px;
-                border: 2px solid gray;
+                border: 2px var(--subscribe-border-color);
                 border-radius: 5px;
                 padding: 0.5rem;
                 font-size: 16px;
                 color: var(--text-color);
-                background-color: transparent;
+                background-color: var(--background-color);
                 outline: none;
                 
                 &::placeholder {
                     color: gray;
+                    font-size: 14px;
                 }
             }
             .subscribe-text::before {
@@ -56,16 +75,17 @@
             }
             .subscribe-button {
                 background-color: var(--link-color);
-                color: white;
+                color: var(--button-text-color);
                 border: none;
+                padding: 1rem 1rem;
                 border-radius: 5px;
-                padding: 0.7rem 1rem;
-                font-size: 16px;
+                font-size: 14px;
                 font-weight: 600;
                 cursor: pointer;
                 transition: 0.3s ease-in-out;
 
                 &:hover {
+                    background:  linear-gradient(to right, #6366f1, #6b64f2, #7263f3, #7a61f4, #815ff5, #8c5df6, #965bf6, #a058f6, #af54f5, #be50f4, #cc4bf2, #d946ef);
                 }
             }
         }
