--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,8 @@
     --button-text-color: #ffffff;
     --logo-border-color: #E2E5F1;
     --Faq-border-color: #E2E5F1;
+    --subscribe-border-color: #D4D7E5;
+    --market-text-color: #ffffff;
   }
   
   [data-theme="dark"] {
@@ -26,5 +28,7 @@
     --button-text-color: #ffffff;
     --logo-border-color: #1f2937;
     --Faq-border-color: #1f2937;
+    --market-text-color: #3E4265;
+
   }
   
