--- a/src/components/Faq/Faqs.scss
+++ b/src/components/Faq/Faqs.scss
@@ -131,7 +131,7 @@
 
         display: flex; 
         flex-direction: column;
-        row-gap: 10px; 
+        row-gap: 15px; 
 
         .contact {
             display: grid;
@@ -164,11 +164,9 @@
                     }
                     i {
                         font-size: 24px;
-                        color: green;
-                       
+                        color: var(--green-color);
                     }
                 }
-               
         
                 button {
                     display: flex;
@@ -230,8 +228,12 @@
             grid-area: text; 
             align-self: flex-start;
             margin-top: 10rem;
+
+            
         }
-    
+
+      
+        
         .faq-border {
           
             grid-area: faq; 
@@ -243,6 +245,25 @@
             display: flex;
             flex-direction: column;
             gap: 1rem; 
+
+            .border {
+
+                h5 {
+                    font-size: 14px;
+                    color: var(--headline-color);
+                    font-weight: 400 bold;
+                }
+           
+               
+            }
+            .faq-answer{
+
+                p {
+                    padding: 1rem;
+                    font-size: 8px;
+                    color: var(--text-color);
+                }
+            }
         }
         
     }
